# subnet-42

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.cookies.generator  Dockerfile.cookies.updater  Dockerfile.vpn  Makefile  README.md  README.vpn.md  docker-compose.yml  entrypoint-vpn.sh  entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml
db/: errors_database.py  routing_table_database.py  telemetry_database.py
interfaces/: types.py
miner/: nats_client.py  routes_manager.py  utils.py
neurons/: __init__.py  miner.py  validator.py
notebooks/: score_simulation.ipynb  validator_analysis.ipynb
scripts/: cookie_grabber.py  init_wallet.py  run_miner.py  run_validator.py  update_cookies.sh
static/: error-logs.html  index.html  routing-table.html  score-simulation.html  unregistered-nodes.html  worker-registry.html
static/css/: dashboard.css
static/js/: dashboard.js
tests/: test_metagraph_e2e.py  test_metagraph_unit.py  test_miner_proxy.py  test_monitoring.py  test_nats_client.py  test_node_manager.py  test_routing_table.py  test_weights_e2e.py  test_weights_unit.py
validator/: api_routes.py  background_tasks.py  config.py  errors_storage.py  http_client.py  metagraph.py  nats.py  network_operations.py  node_manager.py  process_monitor.py  routing_table.py  scorer.py  telemetry.py  telemetry_storage.py  weights.py
validator/tests/: test_api_routes.py  test_node_data_scorer.py  test_scorer.py  test_weights.py
