[project]
name = "subnet-42"
version = "0.1.0"
description = "Subnet 42 implementation using Fiber"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.3",
    "uvicorn==0.30.5",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "loguru==0.7.3",
    "py-bip39-bindings==0.1.11",
    "py-ed25519-zebra-bindings==1.1.0",
    "py-sr25519-bindings==0.2.1",
    "nats-py==2.6.0",
    "scikit-learn",
    "bittensor",
    "bittensor-commit-reveal",
    "fiber @ git+https://github.com/5u6r054/fiber.git@fix/remove-bittensor-commit-reveal-dependency"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.25.3"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"] 